--- a/src/style/SocialLinks.scss
+++ b/src/style/SocialLinks.scss
@@ -1,3 +1,7 @@
+@mixin flex-width {
+  display: flex;
+  width: 100vw;
+}
 .social-links {
   position: fixed;
   top: 25%;
@@ -51,9 +55,7 @@
   .social-links {
     top: 97%;
     ul {
-      display: flex;
-      width: 100vw;
-      position: relative;
+      @include flex-width;
       li {
         width: 100%;
         font-size: 15px;
@@ -72,9 +74,7 @@
   .social-links {
     top: 96%;
     ul {
-      display: flex;
-      width: 100vw;
-      position: relative;
+      @include flex-width;
       li {
         width: 100%;
         font-size: 20px;
@@ -93,9 +93,7 @@
   .social-links {
     top: 94%;
     ul {
-      display: flex;
-      width: 100vw;
-      position: relative;
+      @include flex-width;
       li {
         width: 100%;
         font-size: 25px;
@@ -114,9 +112,7 @@
   .social-links {
     top: 92%;
     ul {
-      display: flex;
-      width: 100vw;
-      position: relative;
+      @include flex-width;
       li {
         width: 100%;
         font-size: 30px;
@@ -135,9 +131,7 @@
   .social-links {
     top: 92%;
     ul {
-      display: flex;
-      width: 100vw;
-      position: relative;
+      @include flex-width;
       li {
         width: 100%;
         font-size: 32px;
