--- a/src/style/SignUp.scss
+++ b/src/style/SignUp.scss
@@ -3,6 +3,10 @@
   top: 0;
   bottom: 0;
 }
+@mixin mobile-left-right-position {
+  left: 0%;
+  right: 0%;
+}
 $input-height: 50px;
 $font: "Open Sans", sans-serif;
 
@@ -106,45 +110,11 @@ $font: "Open Sans", sans-serif;
   }
 }
 
-@media screen and (min-width: 100px) and (max-width: 199px) {
+@media screen and (max-width: 109px) {
   .sign-up {
     .input-container {
       width: 100%;
-      left: 0%;
-      right: 0%;
-      h1 {
-        font-size: 5vw;
-        margin-bottom: 28px;
-      }
-      p {
-        font-size: 4vw;
-        margin-bottom: 12px;
-      }
-      form {
-        #email-field {
-          height: 32px !important;
-          font-size: 3.5vw;
-        }
-        button {
-          height: 32px !important;
-          width: 53%;
-          font-size: 3.5vw;
-          right: -18px;
-        }
-        #email-label {
-          font-size: 3.5vw;
-        }
-      }
-    }
-  }
-}
-
-@media screen and (max-width: 159px) {
-  .sign-up {
-    .input-container {
-      width: 100%;
-      left: 0%;
-      right: 0%;
+      @include mobile-left-right-position;
       h1 {
         font-size: 6vw;
         margin-bottom: 28px;
@@ -156,17 +126,20 @@ $font: "Open Sans", sans-serif;
       form {
         width: 72%;
         #email-field {
-          height: 38px;
+          height: 30px;
           font-size: 4.5vw;
+          padding-right: 25vw;
+          width: 90%;
         }
         button {
-          height: 38px;
-          width: 53%;
+          height: 30px;
+          width: 60%;
           font-size: 4.5vw;
-          right: -18px;
+          right: -14px;
         }
         #email-label {
           font-size: 4.5vw;
+          top: 2px !important;
         }
         #email-message {
           font-size: 4.5vw;
@@ -176,12 +149,49 @@ $font: "Open Sans", sans-serif;
   }
 }
 
-@media screen and (min-width: 160px) and (max-width: 269px) {
+@media screen and (min-width: 110px) and (max-width: 159px) {
   .sign-up {
     .input-container {
       width: 100%;
-      left: 0%;
-      right: 0%;
+      @include mobile-left-right-position;
+      h1 {
+        font-size: 6vw;
+        margin-bottom: 28px;
+      }
+      p {
+        font-size: 5vw;
+        margin-bottom: 12px;
+      }
+      form {
+        width: 72%;
+        #email-field {
+          height: 30px;
+          font-size: 4.5vw;
+          padding-right: 20vw;
+        }
+        button {
+          height: 30px;
+          width: 52%;
+          font-size: 4.5vw;
+          right: -15px;
+        }
+        #email-label {
+          font-size: 4.5vw;
+          top: 2px !important;
+        }
+        #email-message {
+          font-size: 4.5vw;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 160px) and (max-width: 199px) {
+  .sign-up {
+    .input-container {
+      width: 100%;
+      @include mobile-left-right-position;
       h1 {
         font-size: 5.5vw;
         margin-bottom: 28px;
@@ -193,17 +203,57 @@ $font: "Open Sans", sans-serif;
       form {
         width: 72%;
         #email-field {
-          height: 38px;
+          height: 32px;
           font-size: 4vw;
+          padding-right: 17vw;
         }
         button {
-          height: 38px;
-          width: 53%;
+          height: 32px;
+          width: 48%;
           font-size: 4vw;
           right: -18px;
         }
         #email-label {
+          top: 2px !important;
           font-size: 4vw;
+        }
+        #email-message {
+          font-size: 4vw;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 200px) and (max-width: 269px) {
+  .sign-up {
+    .input-container {
+      width: 100%;
+      @include mobile-left-right-position;
+      h1 {
+        font-size: 5.5vw;
+        margin-bottom: 28px;
+      }
+      p {
+        font-size: 4.5vw;
+        margin-bottom: 12px;
+      }
+      form {
+        width: 72%;
+        #email-field {
+          height: 35px;
+          font-size: 4vw;
+          padding-right: 17vw;
+        }
+        button {
+          height: 35px;
+          width: 48%;
+          font-size: 4vw;
+          right: -18px;
+        }
+        #email-label {
+          top: 2px !important;
+          font-size: 3.8vw;
         }
         #email-message {
           font-size: 4vw;
@@ -217,8 +267,7 @@ $font: "Open Sans", sans-serif;
   .sign-up {
     .input-container {
       width: 97%;
-      left: 0%;
-      right: 0%;
+      @include mobile-left-right-position;
       h1 {
         font-size: 15px;
         margin-bottom: 28px;
@@ -254,8 +303,7 @@ $font: "Open Sans", sans-serif;
   .sign-up {
     .input-container {
       width: 90%;
-      left: 0%;
-      right: 0%;
+      @include mobile-left-right-position;
       h1 {
         font-size: 20px;
         margin-bottom: 28px;
