social links update

--- a/src/style/SocialLinks.scss
+++ b/src/style/SocialLinks.scss
@@ -61,9 +61,10 @@
         font-size: 15px;
         a {
           padding: 5px;
+          text-align: center;
         }
         a:hover {
-          padding: 5px 0px;
+          padding: 0px 5px;
         }
       }
     }
@@ -80,9 +81,10 @@
         font-size: 20px;
         a {
           padding: 7px;
+          text-align: center;
         }
         a:hover {
-          padding: 7px 0px;
+          padding: 0px 7px;
         }
       }
     }
@@ -99,9 +101,10 @@
         font-size: 25px;
         a {
           padding: 10px;
+          text-align: center;
         }
         a:hover {
-          padding: 10px 0px;
+          padding: 0px 10px;
         }
       }
     }
@@ -118,9 +121,10 @@
         font-size: 30px;
         a {
           padding: 15px;
+          text-align: center;
         }
         a:hover {
-          padding: 15px 0px;
+          padding: 0px 15px;
         }
       }
     }
@@ -137,9 +141,10 @@
         font-size: 32px;
         a {
           padding: 17px;
+          text-align: center;
         }
         a:hover {
-          padding: 17px 0px;
+          padding: 0px 15px;
         }
       }
     }
